--- a/plugin.xml
+++ b/plugin.xml
@@ -7,7 +7,7 @@
     <keywords>cordova,android,pause,and,resume,download,file,files</keywords>
 
     <hook src="hooks/appBeforeBuild2MakePRD.js" type="before_build"/>
-    <dependency id="cordova-plugin-file-transfer@1.2.1" version="1.2.1" />
+    <dependency id="cordova-plugin-file-transfer" version="1.2.1" />
     <!-- info -->
     <info>
     </info>
